[DT-4031] Remove Java 25 startup warnings from Guice and Conscrypt (#3085)
Co-authored-by: Claude Opus 5.5 <noreply@anthropic.com>